--- a/Submission/notebook.ipynb
+++ b/Submission/notebook.ipynb
@@ -27,7 +27,7 @@
         "id": "GmQeQ5YF8DC0"
       },
       "source": [
-        "- Bagaimana pola pergerakan bulanan nya penyewaan sepeda ?\n",
+        "- Tentang pola pergerakan penyewaan sepeda secara bulana. Pada bulan apa pemakaian sewa sepeda terbanyak ?\n",
         "- Penyewa sepeda seperti apa yang memiliki kontribusi lebih besar? Penyewa terdaftar (registered) atau non-registered (casual) ?"
       ]
     },
