--- a/Submission/notebook.ipynb
+++ b/Submission/notebook.ipynb
@@ -3230,20 +3230,22 @@
       ],
       "metadata": {
         "id": "fz8SxDbKDfoo",
-        "outputId": "32d54bf2-8627-4294-d987-145806134d8b",
+        "outputId": "57588ca4-c4c1-4824-d229-05a534ee4ded",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 550
+          "height": 587
         }
       },
-      "execution_count": 20,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-20-361c1b40a5fc>:10: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
-            "  plt.legend()\n"
+            "<ipython-input-22-361c1b40a5fc>:10: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+            "  plt.legend()\n",
+            "/usr/local/lib/python3.11/dist-packages/IPython/core/pylabtools.py:151: UserWarning: Creating legend with loc=\"best\" can be slow with large amounts of data.\n",
+            "  fig.canvas.print_figure(bytes_io, **kw)\n"
           ]
         },
         {
@@ -3288,13 +3290,13 @@
       ],
       "metadata": {
         "id": "hCWA65JYFoPx",
-        "outputId": "d672e126-dd08-4874-8817-d1c01ff7cfdd",
+        "outputId": "d2ac33f4-98d2-44a9-f181-0e2632c46efc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
         }
       },
-      "execution_count": 21,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
